# giganotes-desktop

./: README.md  angular.json  angular.webpack.js  electron-builder.json  extra-webpack.config.js  ipc-server.js  ipc-server.ts  main.ts  package.json
gigacore/: README.md  package.json
gigacore/native/: Cargo.toml
gigacore/native/src/: lib.rs
nativeaddon/: CMakeLists.txt  package.json
nativeaddon/src/: addon.cpp
src/: index.html  styles.scss
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
src/app/forgot-password/: forgot-password-routing.module.ts  forgot-password.component.ts
src/app/guards/: auth-guard.ts
src/app/home/: home-routing.module.ts  home.component.css  home.component.html  home.component.ts
src/app/home/add-folder-dialog/: add-folder-dialog.component.html  add-folder-dialog.component.ts
src/app/home/confirm-dialog/: confirm-dialog.component.ts
src/app/home/navigation-tree/: navigation-tree.component.css  navigation-tree.component.html  navigation-tree.component.ts
src/app/home/notes-list-with-editor/: notes-list-with-editor.component.css  (+3 more)
src/app/login/: login-routing.module.ts  login.component.html  login.component.scss  login.component.ts
src/app/model/: auth-result.ts  folder.ts  note.ts
src/app/providers/: electron.service.ts
src/app/services/: auth-service.ts  data-service.ts  db-service.ts  local-note-service.ts  note-manager-service.ts  remote-note-service.ts  storage.ts  sync-service.ts
src/assets/tinymce/: tinymce.min.js
src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
(+12 files in other folders)
